v0.19.0/_sources/tutorials/advanced/working_with_panel.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "tutorials/advanced/working_with_panel.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_tutorials_advanced_working_with_panel.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_tutorials_advanced_working_with_panel.py:


Interactive data visualization using ``Panel``
==============================================

.. note::

    Please run the following code examples in a notebook environment
    otherwise the interactive parts of this tutorial will not work. You can
    use the button "Download Jupyter notebook" at the bottom of this page
    to download this script as a Jupyter notebook.

The library `Panel <https://panel.holoviz.org/index.html>`__ can be used to
create interactive dashboards by connecting user-defined widgets to plots.
``Panel`` can be used as an extension to Jupyter notebook/lab.

This tutorial is split into three parts:

- Make a static map
- Make an interactive map
- Add a grid for Earth relief

.. GENERATED FROM PYTHON SOURCE LINES 24-25

Import the required packages

.. GENERATED FROM PYTHON SOURCE LINES 25-33

.. code-block:: Python

    import numpy as np
    import panel as pn
    import pygmt
    from pygmt.params import Axis

    pn.extension()









.. GENERATED FROM PYTHON SOURCE LINES 34-43

Make a static map
-----------------

The `Orthographic projection
<https://www.pygmt.org/dev/projections/azim/azim_orthographic.html>`__
can be used to show the Earth as a globe. Land and water masses are
filled with colors via the ``land`` and  ``water`` parameters of
:meth:`pygmt.Figure.coast`, respectively. Coastlines are added using the
``shorelines`` parameter.

.. GENERATED FROM PYTHON SOURCE LINES 43-60

.. code-block:: Python


    # Create a new instance or object of the pygmt.Figure() class
    fig = pygmt.Figure()
    fig.coast(
        # Orthographic projection (G) with projection center at 0° East and
        # 15° North and a width of 12 centimeters
        projection="G0/15/12c",
        region="g",  # global
        frame=Axis(grid=30),  # Add gridlines in steps of 30 degrees on top
        land="gray",  # Color land masses in "gray"
        water="lightblue",  # Color water masses in "lightblue"
        # Add coastlines with a 0.25-point thick pen in "gray50"
        shorelines="1/0.25p,gray50",
    )
    fig.show()





.. image-sg:: /tutorials/advanced/images/sphx_glr_working_with_panel_001.png
   :alt: working with panel
   :srcset: /tutorials/advanced/images/sphx_glr_working_with_panel_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 61-68

Make an interactive map
-----------------------

To generate a rotation of the Earth around the vertical axis, the central
longitude of the Orthographic projection is varied iteratively in steps of
10 degrees. The library ``Panel`` is used to create an interactive dashboard
with a slider (works only in a notebook environment, e.g., Jupyter notebook).

.. GENERATED FROM PYTHON SOURCE LINES 68-100

.. code-block:: Python


    # Create a slider
    slider_lon = pn.widgets.DiscreteSlider(
        name="Central longitude",  # Give name for quantity shown at the slider
        options=list(np.arange(0, 361, 10)),  # Range corresponding to longitude
        value=0,  # Set start value
    )


    @pn.depends(central_lon=slider_lon)
    def view(central_lon):
        """
        Define a function for plotting the single slices.
        """
        # Create a new instance or object of the pygmt.Figure() class
        fig = pygmt.Figure()
        fig.coast(
            # Vary the central longitude used for the Orthographic projection
            projection=f"G{central_lon}/15/12c",
            region="g",
            frame=Axis(grid=30),
            land="gray",
            water="lightblue",
            shorelines="1/0.25p,gray50",
        )
        return fig


    # Make an interactive dashboard
    pn.Column(slider_lon, view)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Column
        [0] DiscreteSlider(formatter='%d', label='Central longitude', name='Central longitude', options=[np.int64(0), ...], value=0)
        [1] ParamFunction(function, _pane=PNG, defer_load=False)



.. GENERATED FROM PYTHON SOURCE LINES 101-106

Add a grid for Earth relief
---------------------------

Instead of using colors as fill for the land and water masses a grid can be
displayed. Here, the Earth relief is shown by color-coding the elevation.

.. GENERATED FROM PYTHON SOURCE LINES 106-147

.. code-block:: Python


    # Download a grid for Earth relief with a resolution of 10 arc-minutes
    grd_relief = pygmt.datasets.load_earth_relief(resolution="10m")

    # Create a slider
    slider_lon = pn.widgets.DiscreteSlider(
        name="Central longitude",
        options=list(np.arange(0, 361, 10)),
        value=0,
    )


    @pn.depends(central_lon=slider_lon)
    def view(central_lon):
        """
        Define a function for plotting the single slices.
        """
        # Create a new instance or object of the pygmt.Figure() class
        fig = pygmt.Figure()
        # Set up a colormap for the elevation in meters
        pygmt.makecpt(
            cmap="SCM/oleron",
            # minimum, maximum, step
            series=[int(grd_relief.data.min()) - 1, int(grd_relief.data.max()) + 1, 100],
        )
        # Plot the grid for the elevation
        fig.grdimage(
            projection=f"G{central_lon}/15/12c",
            region="g",
            grid=grd_relief,  # Use grid downloaded above
            cmap=True,  # Use colormap defined above
            frame=Axis(grid=30),
        )
        # Add a horizontal colorbar for the elevation.
        fig.colorbar(annot=2000, tick=1000, label="Elevation", unit="m")
        return fig


    # Make an interactive dashboard
    pn.Column(slider_lon, view)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Column
        [0] DiscreteSlider(formatter='%d', label='Central longitude', name='Central longitude', options=[np.int64(0), ...], value=0)
        [1] ParamFunction(function, _pane=PNG, defer_load=False)




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.623 seconds)


.. _sphx_glr_download_tutorials_advanced_working_with_panel.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: working_with_panel.ipynb <working_with_panel.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: working_with_panel.py <working_with_panel.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: working_with_panel.zip <working_with_panel.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
